--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,13 @@
 <resources>
 
     <string name="app_name">My Application2</string>
+
+    <string name="profile_username">Username</string>
+    <string name="profile_gender">Unknown</string>
+    <string name="profile_email">example@gmail.com</string>
+    <string name="profile_phone">xxx-xxx-xxxx</string>
+    <drawable name="profile_photo">@drawable/default_user_photo</drawable>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string-array name="titles">
