--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="profile_gender">waiting...</string>
     <string name="profile_email">waiting...</string>
     <string name="profile_phone">waiting...</string>
-    <drawable name="profile_photo">waiting...</drawable>
+    <drawable name="profile_photo">@drawable/default_user_photo</drawable>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
